# kan

./: .gitignore  BUILD_README.md  CMakeLists.txt  COMPLETE_IMPLEMENTATION.md  CONTINUATION_SUMMARY.md  FINAL_IMPLEMENTATION_STATUS.md  GPU_DETECTION_FIXED.md  GPU_DETECTION_WORKAROUND.md  GPU_FIXED.md  GPU_INTEGRATION_COMPLETE.md  GPU_KERNELS_COMPLETE.md  GPU_KERNELS_SUMMARY.md  GPU_PIPELINE_ANALYSIS.md  GPU_SETUP.md  GPU_USAGE_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_CONTINUATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_UPDATE.md  INFERENCE_OPTIMIZATION_COMPLETE.md  Makefile  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  TRAINING_ACTIVE.md  TRAINING_RUNNING.md  TRAINING_STARTED.md  TRAINING_STATUS.md  build.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  fonseca.md  implementation_plan.md  main.cpp  scratch.md
src/audio/: audio_buffer.cpp  audio_buffer.hpp  feature_extraction.cpp  feature_extraction.hpp  preprocessing.cpp  preprocessing.hpp  wav_reader.cpp  wav_reader.hpp
src/core/: bspline_kan.cpp  bspline_kan.hpp  chebyshev_kan.cpp  chebyshev_kan.hpp  fourier_kan.cpp  fourier_kan.hpp  kan_layer.cpp  kan_layer.hpp  piecewise_linear_kan.cpp  piecewise_linear_kan.hpp  rbf_kan.cpp  rbf_kan.hpp  sinc_kan.cpp  sinc_kan.hpp  tensor.cpp  tensor.hpp
src/data/: fsd50k_data_loader.cpp  fsd50k_data_loader.hpp  fsd50k_loader.cpp  fsd50k_loader.hpp
src/example/: audio_example.cpp  dataset_example.cpp  evaluation_example.cpp  full_model_example.cpp  inference_optimized_example.cpp  language_example.cpp  main.cpp  training_example.cpp
src/gpu/: feature_kernels.cu  feature_kernels.hpp  gpu_feature_extractor.hpp  gpu_kan_layer.cpp  gpu_kan_layer.hpp  gpu_quantum_embedding.hpp  hip_kernels.cpp  hip_kernels.cu  hip_kernels.hpp  kernel_fusion.cpp  kernel_fusion.cu  kernel_fusion.hpp  quantum_kernels.cu  quantum_kernels.hpp  rocfft_wrapper.hpp  rocm_manager.cpp  rocm_manager.hpp
src/inference/: inference_engine.cpp  inference_engine.hpp  optimized_inference.cpp  optimized_inference.hpp
src/model/: language_model.cpp  language_model.hpp  speech_model.cpp  speech_model.hpp
src/quantum/: quantum_field_embedding.cpp  quantum_field_embedding.hpp  wavefunction.cpp  wavefunction.hpp
src/training/: backprop.cpp  backprop.hpp  checkpoint_manager.cpp  checkpoint_manager.hpp  evaluation.cpp  evaluation.hpp  gpu_config.cpp  gpu_config.hpp  gradients.cpp  gradients.hpp  loss.cpp  loss.hpp  optimizer.hpp  trainer.cpp  trainer.hpp  training_session.cpp  training_session.hpp
tests/: CMakeLists.txt
tests/unit/: test_audio.cpp  test_features.cpp  test_kan_layers.cpp  test_quantum_embedding.cpp  test_tensor.cpp  test_training.cpp  test_wavefunction.cpp
tools/: train.cpp
